--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,11 @@
   "ignore": [ "**/.*", "node_modules", "bower_components" ],
   "dependencies":
   {
-    "polymer": "Polymer/polymer#^1.4.0"
-  },
-  "devDependencies":
-  {
+    "polymer": "Polymer/polymer#^1.4.0",
     "jviz": "https://github.com/jviz/jviz.git#dev",
     "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev"
   },
+  "devDependencies": { },
   "license": "MIT",
   "authors": [ "Josemi Juanes <josemijuanes@gmail.com>" ],
   "keywords": [ "jviz", "webcomponents", "jviz-components", "btn", "button" ]
