--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,11 @@
     "jviz": "https://github.com/jviz/jviz.git#dev",
     "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev"
   },
-  "devDependencies": { },
+  "devDependencies":
+  {
+    "jviz": "https://github.com/jviz/jviz.git#dev",
+    "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev"
+  },
   "license": "MIT",
   "authors": [ "Josemi Juanes <josemijuanes@gmail.com>" ],
   "keywords": [ "jviz", "webcomponents", "jviz-components", "btn", "button" ]
