--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,13 @@
 {
   "name": "jviz-btn",
-  "description": "Jviz button webcomponent",
+  "description": "Jviz button elements",
   "ignore": [ "**/.*", "node_modules", "bower_components" ],
   "dependencies":
   {
     "polymer": "Polymer/polymer#^1.4.0",
     "jviz": "https://github.com/jviz/jviz.git#dev",
-    "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev"
-  },
-  "devDependencies":
-  {
-    "jviz": "https://github.com/jviz/jviz.git#dev",
-    "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev"
+    "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev",
+    "jviz-icons": "https://github.com/jviz/jviz-icons.git#dev"
   },
   "license": "MIT",
   "authors": [ "Josemi Juanes <josemijuanes@gmail.com>" ],
