--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,9 @@
   "dependencies":
   {
     "polymer": "Polymer/polymer#^1.4.0",
-    "jviz": "https://github.com/jviz/jviz.git#dev",
-    "jviz-styles": "https://github.com/jviz/jviz-styles.git#dev",
-    "jviz-icons": "https://github.com/jviz/jviz-icons.git#dev"
+    "jviz": "jviz/jviz.git#dev",
+    "jviz-styles": "jviz/jviz-styles.git#dev",
+    "jviz-icons": "jviz/jviz-icons.git#dev"
   },
   "license": "MIT",
   "authors": [ "Josemi Juanes <josemijuanes@gmail.com>" ],
